aliens dropping bombs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-    <invaders-game>
+    <invaders-game score="0" lives="3">
       <invaders-aliens></invaders-aliens>
       <invaders-ship></invaders-ship>
     </invaders-game>
