--- a/index.1.html
+++ b/index.1.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <!-- Reference app, originall in vanila js -->
   <title>Space Invaders</title>
   <style>
     body{
